WARNING: Before upgrading MIMEDefang, please search this file for
*** NOTE INCOMPATIBILITY ** to see if anything has changed that might
affect your filter.

2018-03-21 Dianne Skoll <dfs@roaringpenguin.com>

	* MIMEDefang 2.84 RELEASED

	* mimedefang.pl: Correctly use "$mon" rather than "$min" to generate
	quarantine file names.

	* mimedefang-multiplexor: Make "workerinfo nnn" show how long ago
	the last state change was for a given worker.

2017-10-30 Dianne Skoll <dfs@roaringpenguin.com>

	* MIMEDefang 2.83 RELEASED

	* mimedefang.pl: Do not add a Message-ID: header when handing a
	message to SpamAssassin if the original message lacks such a
	header.

	* Add systemd unit files; thanks to Richard Laager.

	* Minor tweaks to the sample filter.

	* mimedefang-multiplexor: Change the maxLifetime option to kick in
	only once a worker has processed at least one request; also check
	for exceeded lifetimes during the periodic idle-time check.

	* mimedefang-multiplexor: Fix an exit(EXIT_FAILURE) to be
	exit(EXIT_SUCCESS) in on place.

2017-09-08 Dianne Skoll <dfs@roaringpenguin.com>

	* MIMEDefang 2.82 RELEASED

	* Update contrib/graphdefang with improvements from Kevin A. McGrail.

	* Fix Red Hat init script (thanks to Robert Scheck)

	* Exit with EXIT_SUCCESS if mimedefang-multiplexor is told to
	terminate.

	* Terminology change:  Change "slave" to "worker" everywhere.

	*** NOTE INCOMPATIBILITY ***

	Check your init scripts to make sure they use current names for shell
	variables; a few "SLAVE" strings have been changed to "WORKER"

	* Add a new -V maxLifetime option to mimedefang-multiplexor that
	terminates worker processes after maxLifetime seconds (approximately).
	This is in addition to the -r maxRequests option.

	* Log the lifetime and number of requests processed when we terminate
	a worker process.

2017-08-31 Dianne Skoll <dfs@roaringpenguin.com>

	* MIMEDefang 2.81 RELEASED

	* Don't barf if the installed version of Sys::Syslog has a developer