@@ -7418,10 +7418,11 @@ sub get_smtp_return_code {
 #  sock -- a socket connected to an SMTP server
 #  server -- the server we're querying
 # %RETURNS:
-#  A four-element list:(retval, code, dsn, @exts)
-#  where code is a 3-digit SMTP code.
-#  and @exts is a hash of EXTNAME->EXTOPTS
-#  Retval is 'CONTINUE', 'TEMPFAIL' or 'REJECT'.
+#  A four-element list:(retval, code, dsn, exts)
+#  retval is 'CONTINUE', 'TEMPFAIL' or 'REJECT'.
+#  code is a 3-digit SMTP code.
+#  dsn is an extended SMTP status code
+#  exts is a hash of EXTNAME->EXTOPTS
 # %DESCRIPTION:
 #  Checks SMTP server's supported extensions. 
 #  Expects EHLO to have been sent already (artifact of cribbing get_smtp_return_code)
@@ -7458,7 +7459,7 @@ sub get_smtp_extensions {
 
     $code =~ m/2../ and return ('CONTINUE', "$code", "2.5.0", %exts );
     $code =~ m/4../ and return ('TEMPFAIL', "$code", "4.0.0", %exts );
-    $code =~ m/5../ and return ('PERMFAIL', "$code", "5.0.0", %exts );
+    $code =~ m/5../ and return ('REJECT', "$code", "5.0.0", %exts );
 }
 
 
@@ -7560,6 +7561,7 @@ sub md_check_against_smtp_server {
           $sock->print("EHLO $helo\r\n");
           } else {
           #back off from using STARTTLS
+          no warnings 'once';
           md_syslog('debug',"md_check_against_smtp_server: $server offers STARTTLS but fails with error $IO::Socket::SSL::SSL_ERROR. Falling back to plaintext...");
           $sock->print("EHLO $helo\r\n");
        }
